src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Has_Subscription_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Subscription Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historil_RLI_Name__c</fullName>
        <label>Historil RLI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Influencer&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Influencer&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Influencer Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Integration&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Integration&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Integration Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <inlineHelpText>(Jan9&apos;21) This field is now deprecated, because this field no longer belongs on the Opportunity. Instead use the field on the Opportunity Product line level.</inlineHelpText>
        <label>Invoice Frequency (deprecated jan9&apos;21)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Progress Billing</fullName>
                </value>
                <value>
                    <fullName>Bill Upon Completion</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_Instructions__c</fullName>
        <label>Invoicing Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAutomationBypassed__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This is a System Admin formula field used for bypassing Validation Rules and Duplicate Rules. WFRs automatically bypass VRs when they run, which is not the case with PB and Flow. We needed a maintainable solution to enable us to run BP and Flow automation smoothly. It sets the date to NOW() minus 5 seconds, just enough time to make automatic updates. It works in tandem with &apos;Automation Bypass Date/Time field&apos;. JIRA: SFDCSPT-467</description>
        <formula>AutomationBypassDateTime__c &gt; NOW() - 0.00005787037037037037 /*Five Seconds*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Strictly a System Admin field.</inlineHelpText>
        <label>Is Automation Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Days_In_Stage__c</fullName>
        <label>Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Days_To_Close__c</fullName>
        <formula>CloseDate - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Run_Date__c</fullName>
        <label>Reporting Last Run Date (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Source__c</fullName>
        <label>Reporting Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Sourced</fullName>
                </value>
                <value>
                    <fullName>Marketing Influenced</fullName>
                </value>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
        <externalId>true</externalId>
        <label>Reporting Total Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Won_Number__c</fullName>
        <label>Reporting Won Number (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Status_Info__c</fullName>
        <label>State Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <description>To track the reasons Opportunities are moved to Closed Lost. SFDCSPT-289</description>
        <inlineHelpText>Select the reason this Opportunity was marked as Closed Lost.</inlineHelpText>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loss - 1% Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Loss - Competition</fullName>
                </value>
                <value>
                    <fullName>Loss - Default on Payment</fullName>
                </value>
                <value>
                    <fullName>Loss - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Loss - FEDRAMP</fullName>
                </value>
                <value>
                    <fullName>Loss - Keep Existing Solution</fullName>
                </value>
                <value>
                    <fullName>Loss - Lack of functionality</fullName>
                </value>
                <value>
                    <fullName>Loss - No Budget or Approved Project</fullName>
                </value>
                <value>
                    <fullName>Loss - No Decision</fullName>
                </value>
                <value>
                    <fullName>Loss - No Response</fullName>
                </value>
                <value>
                    <fullName>Loss - Price</fullName>
                </value>
                <value>
                    <fullName>Loss - Product Instability</fullName>
                </value>
                <value>
                    <fullName>Loss - Project Delayed/Pushed-Out</fullName>
                </value>
                <value>
                    <fullName>Renewal - Acquisition/Merger</fullName>
                </value>
                <value>
                    <fullName>Renewal - Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Renewal - Change in Business Direction</fullName>
                </value>
                <value>
                    <fullName>Renewal - Default on Payment</fullName>
                </value>
                <value>
                    <fullName>Renewal - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Renewal - Lack of Adoption</fullName>
                </value>
                <value>
                    <fullName>Renewal - Lack of perceived Value</fullName>
                </value>
                <value>
                    <fullName>Renewal - Lost Champion</fullName>
                </value>
                <value>
                    <fullName>Renewal - Project Canceled</fullName>
                </value>
                <value>
                    <fullName>Renewal - Project Never Implemented</fullName>
                </value>
                <value>
                    <fullName>Renewal - Loss of Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MYC_Contract_Amount__c</fullName>
        <description>helptext before jan9&apos;21 was: &quot;Only populate for first year of multi year deal paid annually&quot;</description>
        <inlineHelpText>(Jan9&apos;21) This field is now deprecated, because this field no longer belongs on the Opportunity. Instead use the field on the Opportunity Product line level.</inlineHelpText>
        <label>MYC Contract Amount (deprecated jan9&apos;21)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Approval_Date__c</fullName>
        <businessOwnerGroup>Sales</businessOwnerGroup>
        <description>Automatically populated with TODAY&apos;s date when the &apos;Manager Approved&apos; checkbox on the Opportunity is checked. Locked for editing by end users with the exception of Sales Ops who sometimes need to make edits as they review Opportunities for data quality. JIRA: SFDCSPT-739</description>
        <inlineHelpText>Automatically populated with TODAY&apos;s date when the &apos;Manager Approved&apos; checkbox on the Opportunity is checked. Locked for editing by end users with the exception of Sales Ops who sometimes need to make edits as they review Opportunities for data quality. Managers, if the date must be changed, please notify Sales Ops.</inlineHelpText>
        <label>Manager Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Obligations__c</fullName>
        <inlineHelpText>Hold Ctrl + Left Click to select multiple values</inlineHelpText>
        <label>Marketing Obligations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog Post or Equivalent</fullName>
                </value>
                <value>
                    <fullName>Meetup Host</fullName>
                </value>
                <value>
                    <fullName>Organize a Meetup</fullName>
                </value>
                <value>
                    <fullName>Present at a Meetup</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Private Usability Testing</fullName>
                </value>
                <value>
                    <fullName>Public Presentation or Webinar</fullName>
                </value>
                <value>
                    <fullName>Public Quote (CTO/CEO)</fullName>
                </value>
                <value>
                    <fullName>Recorded Interview and Case Study</fullName>
                </value>
                <value>
                    <fullName>Use of Logo</fullName>
                </value>
                <value>
                    <fullName>Use of Name</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Ambassador Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiyear_Type__c</fullName>
        <description>(Jan9&apos;21) This field is now deprecated, because this field no longer belongs on the Opportunity. Instead use the field on the Opportunity Product line level.</description>
        <inlineHelpText>(Jan9&apos;21) This field is now deprecated, because this field no longer belongs on the Opportunity. Instead use the field on the Opportunity Product line level.</inlineHelpText>
        <label>Multi-Year Type (deprecated jan9&apos;21)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi-Year Contractual</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Prepaid</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Prepaid and Contractual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <businessOwnerGroup>Sales_Development</businessOwnerGroup>
        <description>There is a clearly identified business and/or technical problem that the prospect has to solve, where Neo4j could fit. The prospect has indicated an interest to move forward with discussions and/or an evaluation of Neo4j to address this identified use case. ACTION: Identify why it is necessary for the prospect to address a specific problem and how Neo4j can help solve it. This field, along with the other BANT fields will be used by the sales management team to review SAOs for approval to move to 10%. JIRA: SFDCSPT-638</description>
        <inlineHelpText>There is a clearly identified business and/or technical problem that the prospect has to solve, where Neo4j could fit. The prospect has indicated an interest to move forward with discussions and/or an evaluation of Neo4j to address this identified use case. 

ACTION: Identify why it is necessary for the prospect to address a specific problem and how Neo4j can help solve it.</inlineHelpText>
        <label>Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Analysis_Date__c</fullName>
        <description>Field to capture when an opportunity hits the stage needs analysis. Implemented to track SDR Compensation</description>
        <label>Needs Analysis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Neo4j_Billing_Entity__c</fullName>
        <businessOwnerGroup>Finance</businessOwnerGroup>
        <description>Billing entities of Neo4j. JIRA: SFDCSPT-341</description>
        <inlineHelpText>Choose the correct billing entity of Neo4j.</inlineHelpText>
        <label>Neo4j Billing Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Neo4j_Billing_Entities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Cross_Sell_Up_Sell_Summary__c</fullName>
        <description>Summarizes Products where the Type is New, Cross-Sell or Up-Sell. JIRA: SFDCSPT-253.</description>
        <inlineHelpText>Summarizes Products where the Type is New, Cross-Sell or Up-Sell.</inlineHelpText>
        <label>New/Cross-Sell/Up-Sell Summary</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Type__c</field>
            <operation>equals</operation>
            <value>New, Up-Sell, Cross-Sell</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_or_Cross_Sell_Summary__c</fullName>
        <description>Summarizes new or cross sell field. Necessary for the workflow to notify support a new customer has moved to 99%.</description>
        <label>New or Cross Sell Summary</label>
        <summarizedField>OpportunityLineItem.New_or_Cross_Sell__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Onboarding_Product_Count__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>Indicates how many Products associated with this Opportunity require onboarding. JIRA: SFDCSPT-449</description>
        <inlineHelpText>Indicates how many Products associated with this Opportunity require onboarding.</inlineHelpText>
        <label>Onboarding Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.RequiresOnboarding__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity__c</fullName>
        <businessOwnerGroup>Sales</businessOwnerGroup>
        <description>JIRA: SFDCSPT-633</description>
        <inlineHelpText>Identify ALL competitors for this deal. Multiple values can be selected by holding Ctrl + Left Click.</inlineHelpText>
        <label>Open Opportunity Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AgensGraph</fullName>
                </value>
                <value>
                    <fullName>Alibaba graph</fullName>
                </value>
                <value>
                    <fullName>AllegroGraph</fullName>
                </value>
                <value>
                    <fullName>Amazon (AWS) Neptune</fullName>
                </value>
                <value>
                    <fullName>AnzoGraph DB</fullName>
                </value>
                <value>
                    <fullName>Arango DB</fullName>
                </value>
                <value>
                    <fullName>AtomRain</fullName>
                </value>
                <value>
                    <fullName>Aura Professional</fullName>
                </value>
                <value>
                    <fullName>BigQuery</fullName>
                </value>
                <value>
                    <fullName>Blazegraph</fullName>
                </value>
                <value>
                    <fullName>Cassandra</fullName>
                </value>
                <value>
                    <fullName>DataSTax</fullName>
                </value>
                <value>
                    <fullName>Fauna</fullName>
                </value>
                <value>
                    <fullName>FEDRAMP High Required</fullName>
                </value>
                <value>
                    <fullName>FEDRAMP Medium Required</fullName>
                </value>
                <value>
                    <fullName>FlockDB</fullName>
                </value>
                <value>
                    <fullName>Fluree</fullName>
                </value>
                <value>
                    <fullName>Giraph</fullName>
                </value>
                <value>
                    <fullName>GraphBase</fullName>
                </value>
                <value>
                    <fullName>GraphDB</fullName>
                </value>
                <value>
                    <fullName>Graph Engine</fullName>
                </value>
                <value>
                    <fullName>HGraphDB</fullName>
                </value>
                <value>
                    <fullName>HugeGraph</fullName>
                </value>
                <value>
                    <fullName>HyperGraphDB</fullName>
                </value>
                <value>
                    <fullName>InfiniteGraph</fullName>
                </value>
                <value>
                    <fullName>JanusGraph</fullName>
                </value>
                <value>
                    <fullName>Memgraph</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Cosmos DB</fullName>
                </value>
                <value>
                    <fullName>Mongo DB</fullName>
                </value>
                <value>
                    <fullName>Nebula Graph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Count_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Count 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Currency__c</fullName>
        <formula>Text(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_SDR_Comped__c</fullName>
        <label>Opp SDR Comped</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Support_Level__c</fullName>
        <label>Opp Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Provided by Partner</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Provided by OEM</fullName>
                </value>
                <value>
                    <fullName>No Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Doc__c</fullName>
        <label>Opportunity Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_ARR__c</fullName>
        <description>Rollup of forecasted ARR to make forecasting module work</description>
        <label>Opportunity Forecast ARR</label>
        <summarizedField>OpportunityLineItem.Product_Forecast_ARR__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>This field displays the original source of the Opportunity. JIRA: SFDCSPT-327; SFDCSPT-401</description>
        <inlineHelpText>Select the original source of this Opportunity.</inlineHelpText>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel / Indirect Partner</fullName>
                </value>
                <value>
                    <fullName>Cloud / Tech Partner</fullName>
                </value>
                <value>
                    <fullName>Sales Generated</fullName>
                    <default>true</default>
                    <label>Sales Generated</label>
                </value>
                <value>
                    <fullName>SDR - Inbound Lead</fullName>
                </value>
                <value>
                    <fullName>SDR - Outbound Efforts</fullName>
                </value>
                <value>
                    <fullName>SDR + Channel / Indirect Partner</fullName>
                </value>
                <value>
                    <fullName>SDR + Cloud / Tech Partner</fullName>
                </value>
                <value>
                    <fullName>Customer Success - Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Number_set__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the URL of the original base Opportunity. Used in the Renewals flow and populated automatically when each Renewal Opportunity is created.</description>
        <inlineHelpText>Displays the URL of the original base Opportunity. Used in the Renewals flow and populated automatically when each Renewal Opportunity is created.</inlineHelpText>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Use_Case__c</fullName>
        <label>&quot;Other&quot; Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Perpetual_Product_Group_Count__c</fullName>
        <description>This field is part of Traction tool implementation. Shows how many Products from a distinct Group - &quot;POC/Perpetual&quot;, have are attached to the Opportunity.  
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Shows how many Products from a distinct Group - &quot;POC/Perpetual&quot;, are attached to the Opportunity (POC: Advanced, Enterprise, OEM (Platform), PS – Consulting and, Perpetual - OEM (Royalty)).</inlineHelpText>
        <label>POC/Perpetual Product Group Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Traction__c</field>
            <operation>equals</operation>
            <value>POC/Perpetual</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Pending__c</fullName>
        <label>PO Pending?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No (Already Uploaded)</fullName>
                </value>
                <value>
                    <fullName>No (Not Required)</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerInvolvedAccountAsyncAccId18Digit__c</fullName>
        <description>Scroll down.
This field (Opportunity.PartnerInvolvedAccountAsyncAccId18Digit__c) inherits its value from the Opportunity.PartnerInvolvedAccountAsync__c field, which is calculated on a *Recurring and *Delayed basis.  

@Analytics/Admins:
Due to this being of Type:FORMULA this column cannot be edited directly in dml update files THEREFORE if you need to make edits you should make them at the &quot;Partner Involved&quot; section (a listing seen on each opportunity detail pages).  

@Admins there is logic that maintains [Partner Involved Account] (Opportunity.PartnerInvolvedAccountAsync__c)  reporting in opportunity reporting such as DLRS Async Recurring logic that summarizes &lt;all&gt; oppty&apos;s PI Children  and updates a reportable value into opp&apos;s   Opportunity.PartnerInvolvedAccountAsync__c field (labeled: Opportunity.Partner Involved Account) on a recurring basis</description>
        <formula>MID(PartnerInvolvedAccountAsync__c ,  FIND(&quot;001&quot;, PartnerInvolvedAccountAsync__c) , 18)</formula>
        <inlineHelpText>Asterisks because its calculated on a delayed basis, and it is a formula field thus its value is inherited and nobody can affect value-change to this api column in dml update files.</inlineHelpText>
        <label>PI Acct ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerInvolvedAccountAsync__c</fullName>
        <description>*asterisks because its calculated daily (oct 21, 2020 made it realtime).  Visibility broadened to all profiles on Aug 27, 2020
Todo: make &quot;View PI List&quot; redirect on mobile too.
This field can be used in Opportunity-based reporting to display relevant information from child Partner_Involved object using requirements socialized with the Partner Team and Analytics.


Display ordering/preference Requirements came from project a7z3s0000004SOcAAM and are:
1st Primary flag first (if its one of the 3 roles &amp;&amp; primary,  fyi we satisfy/achieve the 3 role filter in DLRS), then
2nd Referral, then
3rd Reseller, then
4th Influencer</description>
        <formula>/*order follows business requirement*/
if(
not(isblank( DLRS_last_seen_primary_PI_Acct_Id__c)),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_primary_PI_Acct_Id__c,18), &quot;Primary PI: (&quot;+MID(DLRS_last_seen_primary_PI_Acct_Id__c,19,len(DLRS_last_seen_primary_PI_Acct_Id__c)-18)+&quot;)&quot;),

if(not(isblank( DLRS_last_seen_referral_PI_Acct_Id__c)),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_referral_PI_Acct_Id__c,18), &quot;Referral PI: (&quot;+MID(DLRS_last_seen_referral_PI_Acct_Id__c,19,len(DLRS_last_seen_referral_PI_Acct_Id__c)-18)+&quot;)&quot;),

if(not(isblank( DLRS_last_seen_reseller_PI_Acct_Id__c)),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_reseller_PI_Acct_Id__c,18), &quot;Reseller PI: (&quot;+MID(DLRS_last_seen_reseller_PI_Acct_Id__c,19,len(DLRS_last_seen_reseller_PI_Acct_Id__c)-18)+&quot;)&quot;) ,

if(not(isblank( DLRS_last_seen_influencer_PI_Acct_Id__c)),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_influencer_PI_Acct_Id__c,18), &quot;Influencer PI:(&quot;+MID(DLRS_last_seen_influencer_PI_Acct_Id__c,19,len(DLRS_last_seen_influencer_PI_Acct_Id__c)-18)+&quot;)&quot;),


null


)
)
)
)


+

if( partner_involved_count__c ==1,
HYPERLINK(&apos;/lightning/r/&apos;+Id+&apos;/related/Opportunity_Related_Entities__r/view&apos;, &quot; ---View PI List&quot;) ,

if(partner_involved_count__c&gt;=2,HYPERLINK(&apos;/lightning/r/&apos;+Id+&apos;/related/Opportunity_Related_Entities__r/view&apos;, &quot; ---View PI List&quot;),
&quot; &quot;)

)</formula>
        <inlineHelpText>This is a read-only summary of the Opportunity &gt; Related &gt; Partners Involved list, based on business rules for displaying one from potentially many records.  To make changes you must create/change (PI) record entries in Related &gt; &quot;Partners Involved&quot;</inlineHelpText>
        <label>Partner Involved Account</label>
        <type>Text</type>
    </fields>
</CustomObject>